--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ border-color: rgb(0, 0, 0);
 
   <div class="circle-container">
     <div class="center-logo">
-      <img src="logo.png" alt="Logo">
+      <img src="Logo.png" alt="¡SUERTE FIXSO!;)">
     </div>
 
     <a href="https://github.com/GF-2026/Start_on_Report" target="_blank" class="card start-up">
