--- a/index.html
+++ b/index.html
@@ -167,27 +167,27 @@ color: #030303;    /* color blanco, puedes poner cualquier color */
         <img src="Logo.png" alt="Logo">
       </div>
 
-      <a href="https://github.com/GF-2026/Start_on_Report" target="_blank" class="card start-up">
+      <a href="https://gf-2026.github.io/Start_on_Report/" target="_blank" class="card start-up">
         <i class="fas fa-rocket"></i>
         <span>ARRANQUE</span>
       </a>
 
-      <a href="https://github.com/GF-2026/Preventive_Report" target="_blank" class="card preventive">
+      <a href="https://gf-2026.github.io/Preventive_Report" target="_blank" class="card preventive">
         <i class="fas fa-tools"></i>
         <span>PREVENTIVO</span>
       </a>
 
-      <a href="https://github.com/GF-2026/Corrective_Report" target="_blank" class="card corrective">
+      <a href="https://gf-2026.github.io/Corrective_Report" target="_blank" class="card corrective">
         <i class="fas fa-wrench"></i>
         <span>CORRECTIVO</span>
       </a>
 
-      <a href="https://github.com/GF-2026/Diagnostic_Report" target="_blank" class="card diagnostic">
+      <a href="https://gf-2026.github.io/Diagnostic_Report" target="_blank" class="card diagnostic">
         <i class="fas fa-stethoscope"></i>
         <span>DIAGNÓSTICO</span>
       </a>
 
-      <a href="https://github.com/GF-2026/SERVICE-REPORT" target="_blank" class="card open-service">
+      <a href="https://gf-2026.github.io/SERVICE-REPORT" target="_blank" class="card open-service">
         <i class="fas fa-file-alt"></i>
         <span>SERVICIO<br>ABIERTO</span>
       </a>
