--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ color: #030303;    /* color blanco, puedes poner cualquier color */
         <span>DIAGNÓSTICO</span>
       </a>
 
-      <a href="https://gf-2026.github.io/SERVICE-REPORT" target="_blank" class="card open-service">
+      <a href="https://gf-2026.github.io/Service-Report" target="_blank" class="card open-service">
         <i class="fas fa-file-alt"></i>
         <span>SERVICIO<br>ABIERTO</span>
       </a>
